@@ -37,8 +37,6 @@
 *	matrix powers for rational numbers, and scalar^matrix (as matlab
 	does it)
 
-*	extern and global variables (parameters may be enough)
-
 *	add try/catch operator for exceptions (need special exception
 	variable like return_val)
 
