@@ -1,3 +1,13 @@
+Thu Mar 25 16:52:47 2004  George Lebl <jirka@5z.com>
+
+	* configure.in, src/Makefile.am:  Allow compilation without GNOME
+
+	* src/util.h: fixup headers 
+
+	* doc/manual.txt: minor fixes/additions
+
+	* README, NEWS: update
+
 Thu Mar 25 10:05:57 2004  George Lebl <jirka@5z.com>
 
 	* configure.in, src/*.[ch]: don't link the 'genius' binary with
